--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<h1> hello </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<link rel="stylesheet" href="style.css">
+	<title>Xuandong Zhao Project0</title>
+</head>
+<body>
+	<header id="head"><h1>Project 0</h1></header>
+	<img id="image" src="internet.png" alt="Internet">
+	<div id="listTable">
+		<h3>Unordered List</h3>
+		<ul id="list">
+			<li>Item 1</li>
+			<li>Item 2</li>
+			<li>Item 3</li>
+		</ul>
+		<h3>Table</h3>
+		<table id="table">
+			<tr>
+				<th>Item</th>
+				<th>Price</th>
+			</tr>
+			<tr>
+				<td>Item 1</td>
+				<td>$100</td>	
+			</tr>
+			<tr>
+				<td>Item 2</td>
+				<td>$200</td>
+			</tr>
+			<tr>
+				<td>Item 3</td>
+				<td>$300</td>
+			</tr>
+        </table>
+        <a href="https://xuandongzhao.github.io/CS291A_Project/" id="hyperlink">
+            Hyperlink to the github
+        </a>
+	</div>
+</body>
+</html>
