--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<td>$300</td>
 			</tr>
         </table>
-        <a href="https://xuandongzhao.github.io/CS291A_Project/" id="hyperlink">
+        <a href="https://github.com/XuandongZhao/CS291A_Project" id="hyperlink">
             Hyperlink to the github
         </a>
 	</div>
